fix jumping footer

--- a/src/assets/scss/components/Footer.scss
+++ b/src/assets/scss/components/Footer.scss
@@ -13,7 +13,7 @@
             position: relative;
             list-style-type: none;
             display: flex;
-            padding: 38px 0;
+            padding-top: 38px;
 
             li {
                 margin-right: 30px;
