--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -1,15 +1,3 @@
-// @import '../fonts/manrope-bold.ttf';
-// @import '../fonts/manrope-extrabold.ttf';
-// @import '../fonts/manrope-light.ttf';
-// @import '../fonts/manrope-medium.ttf';
-// @import '../fonts/manrope-regular.ttf';
-// @import '../fonts/manrope-semibold.ttf';
-// @import '../fonts/manrope-thin.ttf';
-// @import '../fonts/SourceSansPro-Black.otf';
-// @import '../fonts/SourceSansPro-BlackIt.otf';
-// @import '../fonts/SourceSansPro-Bold.otf';
-// @import '../fonts/';
-
 @font-face {
     font-family: 'Manrope Bold';
     src: url(../fonts/manrope-bold.ttf);
@@ -19,6 +7,12 @@
 @font-face {
     font-family: 'Source Sans Pro';
     src: url(../fonts/SourceSansPro-Regular.otf);
+    format: 'opentype';
+}
+
+@font-face {
+    font-family: 'Source Sans Pro Bold';
+    src: url(../fonts/SourceSansPro-Bold.otf);
     format: 'opentype';
 }
 
