--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -1,6 +1,12 @@
 @import './variables';
 @import './fonts.scss';
 
+* { 
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 html, body {
     background-color: #E4E4E4;
 }
